--- a/Froggies.Web/Areas/Auth/Root/Root.cshtml
+++ b/Froggies.Web/Areas/Auth/Root/Root.cshtml
@@ -1,9 +1,14 @@
 ﻿
-<div class="login-form">
+<div class="login-form auth-card">
 
-	<input type="text" name="login" class="login-form__login" placeholder="Хуй" />
-	<input type="text" name="password" class="login-form__password" placeholder="Жопа" />
+	<input type="text" name="login" class="login-form__login" placeholder="Логин" />
+	<input type="password" name="password" class="login-form__password" placeholder="Пароль" />
 
-	<input type="submit" class="login-form__submit" value="Вход" />
+	<input type="submit" class="login-form__submit auth-button" value="Вход" />
 
+</div>
+
+
+<div class="or-register auth-card">
+	<a href="/auth/register" class="or-register__register-button auth-button">Зарегистрироваться!</a>
 </div>
