--- a/Froggies.Web/Areas/Auth/Root/Root.less
+++ b/Froggies.Web/Areas/Auth/Root/Root.less
@@ -1,5 +1,4 @@
-﻿body {
-	font-family: 'Roboto';
+﻿.area-auth-root {
 	background: #6dacdc;
 	display: flex;
 	align-items: center;
@@ -10,23 +9,39 @@
 		border: 0;
 	}
 
-	.login-form {
+	.auth-card {
 		width: 300px;
 		padding: 40px;
 		background: #68c72f;
-		border: 0; // 3px solid #7de085;
 		border-bottom: 5px solid #3b9c00;
+	}
 
-		input[type=text] {
-			width: 100%;
-			padding-left: 20px;
-			box-sizing: border-box;
-			border-top: 3px solid #3b9c00;
-		}
+	.auth-button {
+		background: #ffc617;
+		color: #907500;
+		border-bottom: 3px solid #957401;
+		height: 50px;
+		font-size: 20px;
+		text-decoration: none;
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		padding: 0 23px;
+	}
+
+	.login-form {
+		margin-top: -150px;
 
 		input {
 			height: 50px;
 			font-size: 20px;
+
+			&[type=text], &[type=password] {
+				width: 100%;
+				padding-left: 20px;
+				box-sizing: border-box;
+				border-top: 3px solid #3b9c00;
+			}
 		}
 
 		&__password {
@@ -34,11 +49,11 @@
 		}
 
 		&__submit {
-			width: 30%;
 			margin-top: 30px;
-			background: #ffc617;
-			color: #907500;
-			border-bottom: 3px solid #957401;
 		}
+	}
+
+	.or-register {
+		margin-top: 30px;
 	}
 }
