--- a/Froggies.Web/ClientApp/reset.less
+++ b/Froggies.Web/ClientApp/reset.less
@@ -13,6 +13,8 @@ body {
 	margin: 0
 }
 
+input { border: 0; }
+
 // HTML5 display definitions ==========================================================================
 //  * Correct `block` display not defined for any HTML5 element in IE 8/9.
 //  * Correct `block` display not defined for `details` or `summary` in IE 10/11 and Firefox.
