--- a/Froggies.Web/ClientApp/reset.less
+++ b/Froggies.Web/ClientApp/reset.less
@@ -13,7 +13,10 @@ body {
 	margin: 0
 }
 
-input { border: 0; }
+input { 
+	border: 0;
+	outline: 0;
+}
 
 // HTML5 display definitions ==========================================================================
 //  * Correct `block` display not defined for any HTML5 element in IE 8/9.
