Fix #27: кнопка рестарта уровня.

--- a/Froggies.Web/ClientApp/common.less
+++ b/Froggies.Web/ClientApp/common.less
@@ -1,7 +1,7 @@
 .card {
     min-width: 300px;
     padding: 40px;
-    background: #68c72f;
+    background-color: #68c72f;
     border-bottom: 5px solid #3b9c00;
 
     input {
@@ -25,7 +25,10 @@
     border: 0;
 
     color: #907500;
-    background: #ffc617;
+    background-color: #ffc617;
+
+    background-position: center;
+    background-repeat: no-repeat;
     
     border: 0;
     border-color: #957401;
@@ -39,7 +42,7 @@
     padding: 0 23px;
     
     &:active {
-        background: #ebbe33;
+        background-color: #ebbe33;
         border: 0;
         border-top: 3px solid;
     }
